First commited as before_68696_rev1